--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Varta:wght@300..700&display=swap" );
-@import url("https://wallpapercave.com/wp/wp9764012.jpg");
+@import url("https://wallpapercave.com/wp/wp9764009.jpg");
 *{
   padding: 0;
   margin: 0;
@@ -8,7 +8,7 @@
 
 }
 body{
-  background-image: url('https://wallpapercave.com/wp/wp9764012.jpg');
+  background-image: url('https://wallpapercave.com/wp/wp9764009.jpg');
   min-height: 100%;
 }
 .login{
@@ -49,7 +49,8 @@ h1{
   gap: 10px;
   border: 2px solid white;
   border-radius: 10px;
-  padding: 15px;
+  padding: 20px;
+  box-shadow: 0px 4px 10px white;
 
   
   
@@ -57,11 +58,16 @@ h1{
   
   
 }
+label{
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
 .one input {
   padding: 10px;
-  margin-top: 10px;
+  margin-top: 5px;
   width: 300px;
-  outline: none;
+  outline: none;margin-bottom: 5px;
 
 }
 .one button{
@@ -69,7 +75,10 @@ h1{
   background-color: white;
   border: none;
   border-radius: 5px;
+ 
+  
 }
+
 .success{
   font-size: 2rem;
   font-weight: 200;
